--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Tex2SQL - Transform questions into SQL queries" />
-    <title>Tex2SQL</title>
+    <meta name="description" content="ChatSQL - Transform questions into SQL queries" />
+    <title>ChatSQL</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
